--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ tag = True
 
 [bumpversion:file:setup.py]
 
-[bumpversion:file:sportsstats/__init__.py]
+[bumpversion:file:lib/sportsstats/__init__.py]
 
 [wheel]
 universal = 1
